    and Prolog module meta-predicates.

    Changed the implementation of the term and goal expansion mechanisms in
    order to only be performed automatically by the Logtalk compiler when
    compiling a source file. When dynamically creating entities at runtime or
    when asserting clauses, the term_expansion/2 and goal_expansion/2 built-in
    methods must be called explicitly.

    Updated the Logtalk compiler implementation in order to simplify passing
    of compilation context data.

    Updated the Logtalk compiler in order to throw a permission error if the
    user attempts to define clauses for the (>>)/2 control construct used in
    lambda expressions.

    Updated the Logtalk compiler in order to preprocess proprietary Prolog
    directives (using any defined config file hooks) after term-expansion
    but before trying to compile the directives as Logtalk directives. This
    change allows for simpler and more robust handling of Prolog proprietary
    directives, specially module directives.

    Recognize callable/1 and compare/3 as Prolog standard built-in predicates.
    Calls to these predicates will no longer be reported when the portability
    flag is set to "warning".

    Added support for the built-in non-terminal call//1 specified in the ISO
    Prolog standardization proposal for Definite Clause Grammars.

    Improved the implementation of Definite Clause Grammars in order to
    rewrite exceptions generated when processing NonTerminal, ::NonTerminal,
    and Obj::NonTerminal goals in grammar rules to refer to non-terminals
    instead of compiled predicate forms when running in debug mode.

    Changed the scope of the built-in methods phrase/2-3 from public to
    private for consistent meta-predicate semantics. Updated the "dcgs"
    example and the corresponding unit tests in order to comply with the
    new phrase/2-3 predicate scope.

    Corrected a bug in the implementation of the phrase/2-3 built-in methods